Bug#44310 C++ compile error (ICC): operator overload missing  - Remove the printout causing the problem.